Corrected padding issue which caused awkward display of text on mobile devices

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,10 +8,10 @@
 
 .generated-password {
 	display: inline;
-	padding: .3em .3em;
 	background-color: #e6e6e6;
 	color: #E84A5F;
 	font-family: "Courier New";
+	font-size: 3em;
 }
 
 .container {
@@ -22,6 +22,7 @@
 
 .error{
 	color: red;
+	font-style: italic;
 }
 
 .title{
